replacing legal stuff header image with red background; fixing green links

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
     image: zippyangular.azurecr.io/zcorp-consumer
     ports:
       - 80:80
+    volumes:
+      - ./dist:/usr/share/nginx/html
