--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^16.14.20",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.20",
+    "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.4",
     "@types/react-slick": "^0.23.7"
   }
 }
