--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/react-redux": "^7.1.20",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "i18next": "^21.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.13.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
