--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,9 @@
          "ts": "never",
          "tsx": "never"
        }
-    ]
+    ],
+    // note you must disable the base rule as it can report incorrect errors
+    "no-use-before-define": "off",
+    "@typescript-eslint/no-use-before-define": ["error"]
  }
 }
