--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
     "@typescript-eslint"
   ],
   "rules": {
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "no-param-reassign": 0,
+    "import/no-cycle": 0
   }
 }
