--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,16 @@ jobs:
       command: login
       containerRegistry: $(docker.containerRegistry)
   - task: Docker@2
-    displayName: Build and Push
+    displayName: Build Initial
+    inputs:
+      command: build
+      repository: $(Build.Repository.Name)-build
+      arguments: --target build
+  - script: |
+      docker run $(Build.Repository.Name)-build npm test
+    displayName: Test
+  - task: Docker@2
+    displayName: Build Final and Push
     inputs:
       command: buildAndPush
       repository: $(Build.Repository.Name)
