--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ jobs:
   condition: eq(variables['docker.enabled'], 'true')
   variables:
     DOCKER_BUILDKIT: 1
-    REPOSITORY: ${{ lower(variables['Build.Repository.Name']) }}
+    DOCKER_REPOSITORY: $[lower(variables['Build.Repository.Name'])]
   steps:
   - task: Docker@2
     displayName: Login
@@ -19,16 +19,16 @@ jobs:
     displayName: Build Initial
     inputs:
       command: build
-      repository: $(REPOSITORY)-build
+      repository: $(DOCKER_REPOSITORY)-build
       arguments: --target build
   - script: |
-      docker run $(Build.Repository.Name)-build npm test
+      docker run $(DOCKER_REPOSITORY)-build npm test
     displayName: Test
   - task: Docker@2
     displayName: Build Final and Push
     inputs:
       command: buildAndPush
-      repository: $(REPOSITORY)
+      repository: $(DOCKER_REPOSITORY)
       tags: |
         $(Build.BuildId)
         latest
