--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,6 @@ jobs:
   condition: eq(variables['docker.enabled'], 'true')
   variables:
     DOCKER_BUILDKIT: 1
-    DOCKER_REPOSITORY: $[lower(variables['Build.Repository.Name'])]
   steps:
   - task: Docker@2
     displayName: Login
@@ -19,16 +18,16 @@ jobs:
     displayName: Build Initial
     inputs:
       command: build
-      repository: $(DOCKER_REPOSITORY)-build
+      repository: $[lower(variables['Build.Repository.Name'])]-build
       arguments: --target build
   - script: |
-      docker run $(DOCKER_REPOSITORY)-build npm test
+      docker run $[lower(variables['Build.Repository.Name'])]-build npm test
     displayName: Test
   - task: Docker@2
     displayName: Build Final and Push
     inputs:
       command: buildAndPush
-      repository: $(DOCKER_REPOSITORY)
+      repository: $[lower(variables['Build.Repository.Name'])]
       tags: |
         $(Build.BuildId)
         latest
