--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,16 +18,16 @@ jobs:
     displayName: Build Initial
     inputs:
       command: build
-      repository: $[lower(variables['Build.Repository.Name'])]-build
+      repository: ${{ lower(variables['Build.Repository.Name']) }}-build
       arguments: --target build
   - script: |
-      docker run $[lower(variables['Build.Repository.Name'])]-build npm test
+      docker run ${{ lower(variables['Build.Repository.Name']) }}-build npm test
     displayName: Test
   - task: Docker@2
     displayName: Build Final and Push
     inputs:
       command: buildAndPush
-      repository: $[lower(variables['Build.Repository.Name'])]
+      repository: ${{ lower(variables['Build.Repository.Name']) }}
       tags: |
         $(Build.BuildId)
         latest
