--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ jobs:
       tags: latest
       arguments: --target build
   - script: |
-      docker run $(DOCKER_REPOSITORY)-build npm test
+      docker run $(docker.containerRegistry)/$(DOCKER_REPOSITORY)-build npm test
     displayName: Test
   - task: Docker@2
     displayName: Build Final and Push
