--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,8 +23,15 @@ jobs:
       tags: latest
       arguments: --target build
   - script: |
-      docker run $(docker.containerRegistry)/$(DOCKER_REPOSITORY)-build npm test
+      docker run --name test $(docker.containerRegistry)/$(DOCKER_REPOSITORY)-build npm test -- --coverage --coverageReporters=cobertura
+      docker cp test:/app/coverage coverage
     displayName: Test
+  - task: PublishCodeCoverageResults@1
+    condition: succeededOrFailed()
+    displayName: Publish Code Coverage Results
+    inputs:
+      codeCoverageTool: Cobertura
+      summaryFileLocation: coverage/cobertura-coverage.xml
   - task: Docker@2
     displayName: Build Final and Push
     inputs:
