using artifacts staging directory instead of workspace to address docker caching issues

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,15 +25,16 @@ jobs:
   - script: |
       set -e
       docker run --name test $(docker.containerRegistry)/$(DOCKER_REPOSITORY)-build npm test -- --coverage --coverageReporters=cobertura
-      docker cp test:/app ./app
-      sed -i "s|<source>/app</source>|<source>./app</source>|g" ./app/coverage/cobertura-coverage.xml
+      docker cp test:/app $(Build.ArtifactStagingDirectory)/app
+      docker rm test
+      sed -i "s|<source>/app</source>|<source>$(Build.ArtifactStagingDirectory)/app</source>|g" $(Build.ArtifactStagingDirectory)/app/coverage/cobertura-coverage.xml
     displayName: Test
   - task: PublishCodeCoverageResults@1
     condition: succeededOrFailed()
     displayName: Publish Code Coverage Results
     inputs:
       codeCoverageTool: Cobertura
-      summaryFileLocation: ./app/coverage/cobertura-coverage.xml
+      summaryFileLocation: $(Build.ArtifactStagingDirectory)/app/coverage/cobertura-coverage.xml
   - task: Docker@2
     displayName: Build Final and Push
     inputs:
