avoid copying node_modules folder out of docker container

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,8 @@ jobs:
   - script: |
       docker run --name test $(docker.containerRegistry)/$(DOCKER_REPOSITORY)-install npm test -- --coverage --coverageReporters=cobertura --reporters=default --reporters=jest-junit
       set -e
-      docker cp test:/app $(Build.ArtifactStagingDirectory)/app
+      docker cp test:/app/coverage $(Build.ArtifactStagingDirectory)/app/coverage
+      docker cp test:/app/src $(Build.ArtifactStagingDirectory)/app/src
       docker rm test
       sed -i "s|<source>/app</source>|<source>$(Build.ArtifactStagingDirectory)/app</source>|g" $(Build.ArtifactStagingDirectory)/app/coverage/cobertura-coverage.xml
     displayName: Test
