Fixed test failure issues and lint issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,8 @@
       "error",
       {
         "devDependencies": [
-          "**/*.stories.tsx"
+          "**/*.stories.tsx",
+          "**/*.test.js"
         ]
       }
     ]
