exclude stories files from code coverage

--- a/package.json
+++ b/package.json
@@ -54,6 +54,12 @@
       }
     ]
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.tsx",
+      "!src/**/*.stories.tsx"
+    ]
+  },
   "browserslist": {
     "production": [
       ">0.2%",
