--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,7 @@
   "extends": [
     "plugin:react/recommended",
     "airbnb",
-    "airbnb-typescript",
-    "prettier"
+    "airbnb-typescript"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
