--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,5 +35,13 @@
     "linebreak-style": "off",
     "no-param-reassign": "off",
     "react/react-in-jsx-scope": "off"
-  }
+  },
+  "overrides": [
+    {
+      "files": ["**/*.tsx"],
+      "rules": {
+        "react/prop-types": "off"
+      }
+    }
+  ]
 }
