--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,14 +34,7 @@
     ],
     "linebreak-style": "off",
     "no-param-reassign": "off",
-    "react/react-in-jsx-scope": "off"
-  },
-  "overrides": [
-    {
-      "files": ["**/*.tsx"],
-      "rules": {
-        "react/prop-types": "off"
-      }
-    }
-  ]
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off"
+  }
 }
