--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   web:
     build: .
-    image: zippyangular.azurecr.io/zcorp-consumer
+    image: zippydev.azurecr.io/zippy-retail-web
     environment:
       - NGINX_AUTH_BASIC=off
     ports:
