--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest-junit": "^13.0.0"
+    "jest-junit": "^13.0.0",
+    "msw": "^0.36.3"
   }
 }
