--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
+    "test-coverage": "npm run test -- --coverage --watchAll=false",
     "test-update": "react-scripts test --updateSnapshot --watchAll=false",
     "test-watch": "react-scripts test",
     "eject": "react-scripts eject",
