--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
+    "test-coverage": "npm run test -- --coverage --watchAll=false",
     "test-update": "react-scripts test --updateSnapshot --watchAll=false",
     "test-watch": "react-scripts test",
     "eject": "react-scripts eject",
@@ -105,6 +106,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest-junit": "^13.0.0"
+    "jest-junit": "^13.0.0",
+    "msw": "^0.36.3"
   }
 }
