--- a/package.json
+++ b/package.json
@@ -107,6 +107,10 @@
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest-junit": "^13.0.0",
-    "msw": "^0.36.3"
+    "msw": "^0.36.3",
+    "msw-storybook-addon": "^1.5.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
