--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "bootstrap": "^5.1.3",
     "enzyme": "^3.11.0",
     "i18next": "^21.4.1",
-    "moment": "^2.29.1",
+    "luxon": "^2.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.13.0",
+    "react-number-format": "^4.9.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
@@ -94,6 +95,7 @@
     "@types/aos": "^3.0.4",
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^24.9.1",
+    "@types/luxon": "^2.0.8",
     "@types/node": "^12.20.36",
     "@types/react": "^16.14.20",
     "@types/react-dom": "^16.9.14",
