--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
+    "@types/google-libphonenumber": "^7.4.23",
     "@types/styled-components": "^5.1.15",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
     "enzyme": "^3.11.0",
+    "google-libphonenumber": "^3.2.25",
     "i18next": "^21.4.1",
     "luxon": "^2.2.0",
     "prop-types": "^15.7.2",
