--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/user-event": "^13.5.0",
     "@types/google-libphonenumber": "^7.4.23",
     "@types/styled-components": "^5.1.15",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
@@ -36,6 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
+    "test:debug": "react-scripts test --runInBand",
     "test-coverage": "npm run test -- --coverage --watchAll=false",
     "test-update": "react-scripts test --updateSnapshot --watchAll=false",
     "test-watch": "react-scripts test",
@@ -94,6 +95,7 @@
     "@storybook/node-logger": "^6.3.12",
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.12",
+    "@testing-library/dom": "^8.11.1",
     "@types/aos": "^3.0.4",
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^24.9.1",
