--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --watchAll=false",
-    "test:debug": "react-scripts test --runInBand",
+    "test-debug": "react-scripts test --runInBand",
     "test-coverage": "npm run test -- --coverage --watchAll=false",
     "test-update": "react-scripts test --updateSnapshot --watchAll=false",
     "test-watch": "react-scripts test",
